changes to content in about me section

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
     <h2>A little bit about me...</h2>
     <p>I’m a self-taught Developer from Sydney, eagerly wanting grow my skills in a professional Web Developer role.
       <br></br>
-      With a passion for all things automotive in my free time, is probably where i get my satisfaction for problem solving and making ideas come to life.</p>
+      My passions lie with all things automotive. And now, with a newly founded love for Web Development and computer programming, i find fulfillment in problem solving and making my ideas come to life.</p>
     </div>
     <div class="portrait">
     <img src="/assets/portait2.png" alt="portrait">
