--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="home-container">
         <div  class="wrapper">
         <div class="home-heading">
-          <h1 class="line1">Hello, my name is</h1>
+          <h1 class="line1">Hello my name is</h1>
           <h2 class="line2">Maxwell Jones,</h2>
           <h3 class="line3">I build things for the internet.</h3>
         </div>
@@ -88,7 +88,7 @@
 
 
 <div class="project-card-text">
-  <p> An Ecommerce store with complete cart functionality minus payment
+  <p>An Ecommerce store with complete cart functionality minus payment
     implementation. React State and local storage were used for the
     cart system. This project taught me a lot about React, some things
     include - State, custom Hooks and React-Router.</p>
@@ -301,7 +301,7 @@
     <h2>A little bit about me...</h2>
     <p>I’m a self-taught Developer from Sydney, eagerly wanting grow my skills in a professional Web Developer role.
       <br></br>
-      My passions lie with all things automotive. And now, with a newly founded love for Web Development and computer programming, i find fulfillment in problem solving and making my ideas come to life.</p>
+      In my spare time my passions lie with all things automotive. Problem solving and bringing ideas to life is what it's all about. With my new found love for Web Development, it's great to exercise these skills in a new and exciting field and take a project from a conceptual design to a usable, functional web app.</p>
     </div>
     <div class="portrait">
     <img src="/assets/portait2.png" alt="portrait">
