added resume to download

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           width="20px"
         />
       
-        <a href="" download="Resume">Resume</a>
+        <a href="/Maxwell Jones Resume 2022.pdf" download="Resume">Resume</a>
   
       </div>
     </div>
@@ -126,10 +126,7 @@
 
 
 <div class="project-card-text">
-  <p>Simply put, it takes the users input and converts it to longitude
-    and latitude, WeatherMaps API takes these values and converts it
-    to a location. From here the weather info is fetched and presented
-    on the map marker.</p>
+  <p>A Weather App that takes a destination (users input) and converts it to longitude and latitude. From here the information is then fetched from an API (temperature, location name ect) and returned on a map marker for display.</p>
   </div>
 
   <div class="project-links">
@@ -234,10 +231,7 @@
           <img src="/assets/weatherapp.png" alt="weather app" />
           <div class="project-card">
             <p>
-              Simply put, it takes the users input and converts it to longitude
-              and latitude, WeatherMaps API takes these values and converts it
-              to a location. From here the weather info is fetched and presented
-              on the map marker.
+              A Weather App that takes a destination (users input) and converts it to longitude and latitude. From here the information is then fetched from an API (temperature, location name ect) and returned on a map marker for display.
             </p>
 
 
