Change resume location

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           width="20px"
         />
       
-        <a href="/Maxwell Jones Resume 2022.pdf" download="Resume">Resume</a>
+        <a href="/assets/Maxwell Jones Resume 2022.pdf" download="Resume">Resume</a>
   
       </div>
     </div>
